@@ -70,6 +70,7 @@
 52. Cleanup some settings. No longer offer to save lyrics, artist images, and
     backdrops in MPD folder, just save in cache dir. Move cover filename
     setting into interface settings - in a new 'Covers' tab.
+53. Fetch missing covers from iTunes.
 
 2.2.0
 -----
